<?xml version="1.0"?>
<package format="3">
  <name>cpp_message</name>
  <version>1.0.0</version>
  <description>The cpp message package</description>
  <maintainer email="carma@dot.gov">carma</maintainer>
  <license>Apache2</license>
  <author email="carma@dot.gov">carma</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>cav_msgs</depend>
  <depend>carma_utils</depend>
  <depend>j2735_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
