<?xml version="1.0"?>
<!--
  Copyright (C) 2018-2020 LEIDOS.

  Licensed under the Apache License, Version 2.0 (the "License"); you may not
  use this file except in compliance with the License. You may obtain a copy of
  the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  License for the specific language governing permissions and limitations under
  the License.
-->
<package format="3">
  <name>rosjava_utils</name>
  <version>1.0.0</version>
  <description>CARMA package containing utility classes for rosjava nodes</description>

  <maintainer email="carma@todo.todo">carma</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosjava_build_tools</depend>
  <depend>message_generation</depend>
  <depend>genjava</depend>
  <depend>rosjava_messages</depend>
  <depend>cav_msgs</depend>
  <depend>cav_srvs</depend>
  <depend>j2735_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
