<?xml version="1.0"?>
<package format="3">
  <name>traffic_incident</name>
  <version>4.0.0</version>
  <description>The traffic_incident package</description>
  <maintainer email="carma@dot.gov">carma</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>carma_cmake_common</build_depend>
  <build_depend>ament_auto_cmake</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <depend>carma_msgs</depend>
  <depend>carma_v2x_msgs</depend>
  <depend>std_srvs</depend>
  <depend>carma_ros2_utils</depend>
  <depend>gps_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>