<?xml version="1.0"?>
<!--
  Copyright (C) 2018-2020 LEIDOS.

  Licensed under the Apache License, Version 2.0 (the "License"); you may not
  use this file except in compliance with the License. You may obtain a copy of
  the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  License for the specific language governing permissions and limitations under
  the License.
-->
<package>
  <name>message</name>
  <version>3.3.0</version>
  <description>Message package which converts DSRC binary into ros messages</description>

  <maintainer email="carma@todo.todo">carma</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>genjava</build_depend>
  <build_depend>rosjava_messages</build_depend>
  <build_depend>cav_msgs</build_depend>
  <build_depend>cav_srvs</build_depend>
  <build_depend>j2735_msgs</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosjava_utils</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>robot_state_publisher</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
